# configcraft

./: CMakeLists.txt  README.md  conanfile.py  modules.cmake
ConfigCraft/: ConfigCraft.cmake  main.cpp
JSON/: JSON.cmake  JSON.cpp  JSON.hpp  cppcraft.cpp  cppcraft.hpp  cpptemplates.hpp
